--- a/src/cdn/settings/light.css
+++ b/src/cdn/settings/light.css
@@ -1,6 +1,6 @@
 :root,
 body.light {
-  --primary: #6750A4;
+  --primary: #08204A;
   --on-primary: #FFF;
   --primary-container: #EADDFF;
   --on-primary-container: #21005E;
