--- a/src/cdn/settings/light.css
+++ b/src/cdn/settings/light.css
@@ -1,7 +1,7 @@
 :root,
 body.light {
   --primary: #08204A;
-  --on-primary: #FFF;
+  --on-primary: #FFFFFF;
   --primary-container: #EADDFF;
   --on-primary-container: #21005E;
   --secondary: #625B71;
